iRedMail-0.8.4:
    * New SQL columns in `vmail.mailbox` for per-user restriction, used by
      iRedAPD:
      allowedsenders, rejectedsenders, allowedrecipients, rejectedrecipients
    * Now supports OpenBSD built-in LDAP daemon: ldapd(8).
    * Fixed:
        - Cannot handle alias domain in Postfix per-user bcc.
          Thanks Ward De Backer <wdb _at_ stabe.be> for the report.

    * Package update:
        + Roundcube webmail -> 0.8.4

iRedMail-0.8.3:
    * Works on OpenBSD 5.2.
    * Works on Ubuntu 12.10 (quantal).
    * Dovecot will send an email to postmaster@ if user's mailbox is larger
      than or equal to 95% full.
    * Drop support for below distributions and releases:
        + FreeBSD 8.x.
        + Ubuntu 10.04 (lucid). Please use 12.04 (precise) instead.
        + openSUSE 12.1 (asparagus). Please use 12.2 (mantis) instead.

    * Fixed:
        + Incorrect LDAP uri in cluebringer Apache config file.
          Thanks labasus <labas _at_ gmx.co.uk> for the report.
        + amavisLocal=true should be amavisLocal=TRUE (upper cases) in
          tools/create_mail_user_OpenLDAP.sh.
          Thanks soxgoon @https://bitbucket.org/ (issue #6)
        + Incorrect SQL table name in Cluebringer httpd config file.
        + Empty value of AMAVISD_VIRUSMAILS_DIR on RHEL/CENTOS/Scientific 6.
          This issue causes cron job deletes DKIM pem files.
          Thanks kislik <kislik _at_ centrum.cz> for the report.

    * Package update:
        + phpMyAdmin -> 3.5.3
        + iRedAdmin -> 0.2
        + Roundcube webmail -> 0.8.2

iRedMail-0.8.2:
    * Add shell script to backup PostgreSQL databases in cron by default.
      Script is /var/vmail/backup/backup_pgsql.sh, backup directory is
      /var/vmail/backup/pgsql/.
    * It now works on openSUSE-12.2 with all 3 backends available.
    * Drop support for Ubuntu-11.10 (oneiric).
    * New columns for MySQL/PGSQL backend in table vmail.mailbox:
      isadmin, isglobaladmin, language.