@@ -4,6 +4,7 @@ iRedMail-0.8.4:
       allowedsenders, rejectedsenders, allowedrecipients, rejectedrecipients
     * Now supports OpenBSD built-in LDAP daemon: ldapd(8).
     * Fixed:
+        - Not enable OpenLDAP TLS/SSL support on OpenBSD by default.
         - Cannot handle alias domain in Postfix per-user bcc.
           Thanks Ward De Backer <wdb _at_ stabe.be> for the report.
 
